8210438: [Linux] jpackager fails to build with older compilers

Submitted-by: almatvee

Reviewed-by: herrick, kcr